# swagger.yaml
@@ -61,7 +61,11 @@ paths:
           description: "Task for create"
           required: true
           schema:
-            $ref: "#/definitions/TaskNew"
+            type: "object"
+            properties:
+              id:
+                type: "string"
+                example: "ai1q755jt7tys1p"
       responses:
         201:
           description: "Success"
@@ -69,7 +73,7 @@ paths:
             $ref: "#/definitions/Task"
         400:
           description: "Miss header with tasks owner"
-    
+
   /tasks/{id}:
     get:
       tags:
@@ -97,6 +101,8 @@ paths:
             $ref: "#/definitions/Task"
         400:
           description: "Miss header with tasks owner"
+        404:
+          description: "Task not found"
     post:
       tags:
         - "Task"
@@ -129,6 +135,8 @@ paths:
             $ref: "#/definitions/Task"
         400:
           description: "Miss header with tasks owner"
+        404:
+          description: "Task not found"
     patch:
       tags:
         - "Task"
@@ -161,6 +169,9 @@ paths:
             $ref: "#/definitions/Task"
         400:
           description: "Miss header with tasks owner"
+        404:
+          description: "Task not found"
+      deprecated: true
     delete:
       tags:
         - "Task"
@@ -178,13 +189,13 @@ paths:
           in: "path"
           description: "ID of task to return"
           required: true
-          type: "integer"
-          format: "int64"
+          type: "string"
       responses:
         200:
           description: "Succesfully deleted"
         400:
           description: "Miss header with tasks owner"
+
 definitions:
   Task:
     type: "object"
@@ -193,9 +204,8 @@ definitions:
     - "photoUrls"
     properties:
       id:
-        type: "integer"
-        format: "int62"
-        example: 285
+        type: "string"
+        example: "ai1qeyzjt7pgiot"
       title:
         type: "string"
         example: "Make my Home Work"
